--- a/styles/style.css
+++ b/styles/style.css
@@ -1,157 +1,136 @@
 *{
     margin: 0px;
     padding: 0px;
-    color: white;
 }
-.body{
-    width: 100vw;
+html{
+    max-height: 400vh;
+}
+body{
+    background-color: blue;
+    align-items: center;
+
+}
+#left_border{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: max(400vh,2400px);
+    width: 12.5vw;
+    background-color: rgb(34,37,44);
+}
+#left_numbers{
+    position: absolute;
+    display: flex;
+    top: 0px;
+    left: 12.5vw;
+    height: max(400vh,2400px);
+    width: 3.125vw;
+    font-size: max(1.75vw,15pt);
+    color: rgb(77,79,99);
+    padding-right: 0.125vw;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.number{
+    width:3vw;
+    text-align: right;
+    font-family: sans-serif;
 }
 .nav{
-    position:fixed;
-    top: 25%;
-    height: 50%;
-    right: -20px;
-}
-.nav_list{
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-    list-style: none;
-}
-.nav_el{
-    margin: 1px 0px;
     width: 100%;
-    font-size: 2vw;
-    background-color: rgba(0, 0, 0, 0.708);
-    padding: 10px;
-    border-radius: 20px;
-    transition: width 1s;
-}
-.nav_el:hover{
-    width: 180%;
-}
-.section{
-    height: 100vh;
-    width: 100%;
+    height: 7.4vh;
+    position: fixed;
+    top: 0px;
+    background-color: rgb(34,37,44);
     display: flex;
     justify-content: center;
     align-items: center;
 }
-#Hero{
-    background: rgb(1,56,108);
-    background: linear-gradient(0deg, rgba(1,56,108,1) 0%, rgba(14,53,166,1) 100%);
+.nav_list{
+    display: flex;
+    list-style: none;
+    font-size: 25pt;
+    font-family: Engadget;
+    color: rgb(77,79,99);
+    flex-direction: row;
+    justify-content: space-between;
+    width: 33vw;
+    min-width: 600px;
 }
-.name_desc{
-    width: 55%;
+.nav_el:hover{
+    color: rgb(191,191,191);
+    cursor: pointer;
+}
+.section{
+    height: max(100vh,600px);
+    width: 100%;
+    background-color: rgb(41,44,53);
+    font-family: Engadget;
+}
+#Hero{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.hero_left{
+    padding-left: 16vw;
     height: 100%;
+    width: 45vw;
     display: flex;
     flex-direction: column;
-    padding-left: 3%;
+}
+.desc{
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    height: 50%;
+}
+div.direct_access{
+    height: 50%;
+    width: 100%;
+    display: flex;
+    font-family: Engadget;
+    flex-direction: column;
     justify-content: center;
+    padding-left: 10px;
+}
+p.direct_access{
+    color: rgb(191,191,191);
+    font-size: 25pt;
+}
+ul.direct_access{
+    width: max(35%,170px);
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    justify-content: space-between;
+}
+li.direct_access{
+    width: calc(25%-5px);
+}
+img.direct_access{
+    width: 100%;
+}
+img.direct_access:hover{
+    cursor: pointer;
 }
 .name{
-    font-size: 8vw;
+    color: rgb(100,182,193);
+    font-size: max(3.5vw, 40pt);
 }
-.hero_imgs{
+.role{
+    color: rgb(151,196,118);
+    font-size: max(2vw,20pt);
+}
+.hero_right{
+    width: 36vw;
     height: 100%;
-    width: 45%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-.hero_img{
-    width: 50%;
-    height: 50%;
     display: flex;
 }
-#h_py{
-    align-items: flex-end;
-    justify-content: flex-end;
-}
-#h_an{
-    align-items: flex-end;
-    justify-content: flex-start;
-}
-#h_ml{
-    align-items: flex-start;
-    justify-content: flex-end;
-}
-#h_en{
-    align-items: flex-start;
-    justify-content: flex-start;
-}
-.h_svg{
-    width: 70%;
-    margin: 2px;
-    /* transition: width 0.5s;
-    transition-timing-function: ease-out; */
-}
-/* .h_svg:hover{
-    width: 75%
-} */
-#py_svg{
-    animation-name: h_py;
-    animation-duration: 5s;
-    animation-iteration-count: infinite;
-}
-#an_svg{
-    animation-name: h_an;
-    animation-duration: 5s;
-    animation-iteration-count: infinite;
-}
-#ml_svg{
-    animation-name: h_ml;
-    animation-duration: 5s;
-    animation-iteration-count: infinite;
-}
-#en_svg{
-    animation-name: h_en;
-    animation-duration: 5s;
-    animation-iteration-count: infinite;
-}
-@keyframes h_py{
-    0%      {width: 75%;}
-    12.5%   {width: 75%;}
-    25%     {width: 70%;}
-    37.5%   {width: 70%;}
-    50%     {width: 70%;}
-    62.5%   {width: 70%;}
-    75%     {width: 70%;}
-    87.5%   {width: 70%;}
-    100%    {width: 75%;}
-}
-@keyframes h_an{
-    0%      {width: 70%;}
-    12.5%   {width: 70%;}
-    25%     {width: 75%;}
-    37.5%   {width: 75%;}
-    50%     {width: 70%;}
-    62.5%   {width: 70%;}
-    75%     {width: 70%;}
-    87.5%   {width: 70%;}
-    100%    {width: 70%;}
-}
-@keyframes h_en{
-    0%      {width: 70%;}
-    12.5%   {width: 70%;}
-    25%     {width: 70%;}
-    37.5%   {width: 70%;}
-    50%     {width: 75%;}
-    62.5%   {width: 75%;}
-    75%     {width: 70%;}
-    87.5%   {width: 70%;}
-    100%    {width: 70%;}
-}
-@keyframes h_ml{
-    0%      {width: 70%;}
-    12.5%   {width: 70%;}
-    25%     {width: 70%;}
-    37.5%   {width: 70%;}
-    50%     {width: 70%;}
-    62.5%   {width: 70%;}
-    75%     {width: 75%;}
-    87.5%   {width: 75%;}
-    100%    {width: 70%;}
+#me{
+    margin-top: 7.4vh;
+    object-fit: cover;
+    max-width: 100%;
+    max-height: 92.6vh;
 }
