--- a/styles/style.css
+++ b/styles/style.css
@@ -114,6 +114,7 @@ img.direct_access{
 }
 img.direct_access:hover{
     cursor: pointer;
+    width: 110%;
 }
 .name{
     color: rgb(100,182,193);
@@ -133,4 +134,53 @@ img.direct_access:hover{
     object-fit: cover;
     max-width: 100%;
     max-height: 92.6vh;
+}
+#About{
+    display: flex;
+    flex-direction: column;
+}
+#About>div{
+    height: 30.8vh;
+    padding-left: 16vw;
+}
+.blue_header{
+    font-size: 35pt;
+    color: rgb(100,182,193);
+}
+#About>div>p{
+    color: rgb(191,191,191);
+    font-size: 27pt;
+    padding-right: 20vw;
+    text-align: justify;
+    font-family: sans-serif;
+}
+.container_box{
+    width: 85%;
+    height: 20vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.box{
+    height: 100%;
+    width: 18%;
+    background-color: rgb(77,79,99);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 40px;
+}
+.box>img{
+    height: 60%;
+    aspect-ratio: 1 / 1;
+}
+.box>img:hover{
+    height: 65%;
+}
+.box>h3{
+    margin-top: 10px;
+    font-size: 19pt;
+    font-family: sans-serif;
+    color: rgb(191,191,191);
 }
